--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ num-bigint = { version = "=0.4.3", default-features = false, features = ["rand"]
 # ZKP Generation
 ark-crypto-primitives = { version = "=0.4.0" }
 ark-ec = { version = "=0.4.1", default-features = false, features = ["parallel"] }
-ark-ff = { version = "=0.4.1", default-features = false, features = ["parallel", "asm"] }
+ark-ff = { version = "=0.4.1", default-features = false, features = ["asm", "parallel"] }
 ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
 ark-bn254 = { version = "=0.4.0" }
 ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
@@ -50,6 +50,7 @@ ethers = "=2.0.7"
 [[bench]]
 name = "groth16"
 harness = false
+
 
 [features]
 default = ["wasmer/default", "circom-2", "ethereum"]
